src/styles/animations.scss
@use "sass:math";

.animations {
  margin: 0 auto;
  position: relative;
  height: 530px;

  &__title {
    margin: 0;
    position: absolute;
    z-index: 10;
    top: -45px;
    left: 0;

    span {
      font-size: 56px;
      font-weight: 700;
      line-height: 67px;
      color: $black-blue;
      position: relative;

      &::before {
        content: "";
        position: absolute;
        left: -80px;
        width: 5px;
        height: 100%;
        background: linear-gradient(180deg, #3877ee -5%, #ef5da8 85%);
      }
    }
  }

  &__container {
    height: 530px;
    display: flex;
    justify-content: center;
    align-items: center;
  }

  &__dates {
    position: relative;
    z-index: 10;
    display: flex;
    gap: 115px;
  }

  &__date {
    font-size: 200px;
    font-weight: 700;
    line-height: 160px;
    letter-spacing: -0.02em;
    cursor: pointer;

    &_next {
      color: $fuchia;
    }

    &_prev {
      color: $iris;
    }
  }

  &__counter {
    position: absolute;
    z-index: 10;
    left: 0;
    bottom: -40px;
  }

  &__counter-label {
    font-size: 14px;
    font-weight: 400;
    line-height: 18px;
    color: $black-blue;
    margin-bottom: 20px;
  }

  &__buttons {
    display: flex;
    gap: 20px;
  }

  &__button {
    height: 50px;
    width: 50px;
    font-size: 30px;
    color: $black-blue;
    background: $white;
    border: 1px solid $black-blue;
    border-radius: 50%;
    display: inline-flex;
    justify-content: center;
    align-items: center;

    &:disabled {
      opacity: 50%;
    }

    &_next {
      img {
        transform: scale(-1, 1);
      }
    }
  }
}

.circle {
  position: absolute;
  z-index: 15;
  width: 530px;
  height: 530px;
  top: 480px;
  left: 50%;
  transform: translate(-50%, -50%);
  border: 1px solid rgba($black-blue, 0.2);
  border-radius: 50%;

  &__container {
    position: relative;
    width: 100%;
    height: 100%;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
  }

  &__dot {
    position: absolute;
    width: 6px;
    height: 6px;
    border-radius: 50%;
    background: $black-blue;

    &:hover {
      button {
        display: inline-block;
      }
    }

    &_1 {
      right: math.div(132px, 530px) * 100%;
      top: math.div(31px, 530px) * 100%;
    }

    &_2 {
      right: math.div(120px, 530px) * 100%;
      bottom: math.div(38px, 530px) * 100%;
    }

    &_3 {
      left: -3px;
      bottom: 50% - math.div(3px, 530px) * 100%;
    }
  }

  &__button {
    display: none;
    width: 56px;
    height: 56px;
    border: 1px solid rgba($dark-blue, 0.2);
    border-radius: 50%;
    background: $white;
    color: $black-blue;
    overflow: visible;
    transform: translate(-50%, -50%);
    font-size: 20px;
    font-weight: 400;
    line-height: 30px;

    &.active {
      display: inline-block;
    }
  }
}

